# lycitea

./: CMakeLists.txt  CREDITS  Makefile  Makefile.objects  README.md  config.h  config.h.in  config.m4  config.nice  config.status  configure  libtool  lycitea.c  lycitea.la  lycitea.lo  lycitea_exception.c  lycitea_exception.h  lycitea_exception.lo  performance_bench.php  php_lycitea.h  test.php
.libs/: lycitea.la  lycitea.lai
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
caches/: lycitea_cache_lru.c  lycitea_cache_lru.h  lycitea_cache_lru.lo
helpers/: lycitea_helpers_common.c  lycitea_helpers_common.h  lycitea_helpers_common.lo  lycitea_helpers_lru.c  lycitea_helpers_lru.h  lycitea_helpers_lru.lo  lycitea_helpers_router.c  lycitea_helpers_router.h  lycitea_helpers_router.lo
routes/: lycitea_route_simple.c  lycitea_route_simple.h  lycitea_route_simple.lo
